2008-01-07  James Youngman  <jay@gnu.org>

	* release.h: Fixed typo in the file header comment.

	* delta-table.h (class cssc_delta_table): Don't initialise sid
	objects from NULL.  

	* fileiter.cc (sccs_file_iterator): Ignore subdirectories, even if
	they do start with "s.".
	* file.cc (is_directory): New function.
	* file.h: Declare is_directory.

2008-01-06  James Youngman  <jay@gnu.org>

	* sf-delta.cc (add_delta): Removed obsolete "XXX" comments.
	* sf-prs.cc (get): Likewise.
	* cdc.cc (main): Avoid initialising a sid object by assignment
	from NULL, because it's not quite clear what that is intended to
	do.  Instead, use an assignment from sid::null_delta().
	* sid.cc (null_sid): Implement the function.
	* sid.h (class sid): Declare sid::null_sid().
	* get.cc (main): Avoid initialising a sid object by assignment
	from NULL.
	* delta.cc (delta_main): Likewise.
	* val.cc (main): Likewise.
	* rmdel.cc (main): Likewise.
	* unget.cc (main): Likewise.
	* sccsfile.cc (sccs_file::sccs_file): Likewise.
	* sf-admin.cc (admin): Likewise.
	* prs.cc (main): Likewise; also disable the -R option.

	* sf-val.cc (validate_isomorphism): Extend the comment setting out
	the design for this method.  The method is still unimplemented,
	though.  

	Various tidyings-up of TODO items.
	* prompt.cc (prompt_user): Now that this code is well tested,
	increase the allocation chunk size and remove the TODO item
	reminding me to do that.   Use a small _initial_ chunk size to
	make sure that at least one reallocation takes place, for adequate
	code coverage.
	* mystring.cc: Removed TODO comments which actually don't need to
	be done.

	* sf-admin.cc (admin): If all releases are locked ("admin -fla")
	and the user tries to unlock just one release, issue an error
	message (instead of just ignoring the attempt).
	* docs/cssc.texi (admin): Explain the (already existing)
	restriction and how to get around it.

	Implement "get -l", "get -L" and "get -lp".